fix: add ; in no wrapp proprety

--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ body::before{
     gap: 15px;
     overflow-x: scroll;
     padding-bottom: 12px;
-    flex-wrap: nowrap
+    flex-wrap: nowrap;
+    width: 100%;
 }
 
 .forecast-item-container::-webkit-scrollbar{
